Fixed centre align of logo on home page #story[612]

--- a/ui/src/css/index.css
+++ b/ui/src/css/index.css
@@ -17,6 +17,10 @@ body {
     height: 100vh;
 }
 
+.centerAlignDiv {
+    padding-top: 10%;
+}
+
 #subtitle {
     font-family: Arial, sans-serif;
     font-style: italic;
